--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+      <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <img class="images-gradient" src="./gradient.png" alt="gradient">
@@ -13,16 +15,16 @@
 
     <div class="container">
          <header>
-        <h1 class="logo">Ayan</h1>
+        <h1 data-aos="fade-down" data-aos-duration="1500" class="logo">Ayan</h1>
 
         <nav>
-            <a href="#">COMPANY</a>
-            <a href="#">FEATURES</a>
-            <a href="#">RESOURCES</a>
-             <a href="#">DOCS</a>
+            <a  data-aos="fade-down" data-aos-duration="1500" href="#">COMPANY</a>
+            <a  data-aos="fade-down" data-aos-duration="2000"  href="#">FEATURES</a>
+            <a  data-aos="fade-down" data-aos-duration="2500"  href="#">RESOURCES</a>
+             <a  data-aos="fade-down" data-aos-duration="3000"  href="#">DOCS</a>
         </nav>
 
-        <button class="btn-signing">SIGING</button>
+        <button  data-aos="fade-down" data-aos-duration="1500"  class="btn-signing">SIGING</button>
     </header>
 
     <main>
@@ -39,13 +41,24 @@
         </P>
 
         <div class="buttons">
-            <a href="#" class=".btn-get-started">Documentation</a>
-            <a href="#" class=".btn-signing-main">Getstarted</a>
+            <a href="#" class="btn-get-started">Documentation</a>
+            <a href="#" class="btn-signing-main">Getstarted</a>
         </div>
     </div>
     </main>
+
+    <spline-viewer class="robot-3d" url="https://prod.spline.design/q0h9HyMw9QH3Xd1o/scene.splinecode"></spline-viewer>
  
     </div>
+
+  <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.44/build/spline-viewer.js"></script>
+
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+
    
 
 </body>
